switched to vertx-3.9.0 and adjusted methods in JooqQueries classes

--- a/vertx-pg-reactive-jooq/pom.xml
+++ b/vertx-pg-reactive-jooq/pom.xml
@@ -8,10 +8,11 @@
 	<description>VertX implementation using Reactive PostgresSQL Client with plain (handwritten) queries</description>
 
 	<properties>
-		<vertx.version>3.8.2</vertx.version>
+		<vertx.version>3.9.0</vertx.version>
 		<main.verticle>com.ns.vertx.pg.MainVerticle</main.verticle>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jooq.version>3.11.9</jooq.version>
+		<vertx-jooq-classic-reactive.version>5.1.1</vertx-jooq-classic-reactive.version>
 	</properties>
 
 	<dependencyManagement>
@@ -68,7 +69,7 @@
 		<dependency>
 			<groupId>io.github.jklingsporn</groupId>
 			<artifactId>vertx-jooq-classic-reactive</artifactId>
-			<version>5.0.1</version> <!-- CHANGE to 5.1.1 -->
+			<version>${vertx-jooq-classic-reactive.version}</version> <!-- CHANGED from 5.0.1 to 5.1.1 -->
 		</dependency>
 		<!-- added for jooq reactive dependencies::END -->
 	</dependencies>
@@ -194,7 +195,7 @@
 					<dependency>
 						<groupId>io.github.jklingsporn</groupId>
 						<artifactId>vertx-jooq-generate</artifactId>
-						<version>5.0.1</version> <!-- CHANGE to 5.1.1 -->
+						<version>${vertx-jooq-classic-reactive.version}</version> <!-- CHANGED from 5.0.1 to 5.1.1 -->
 					</dependency>
 				</dependencies>
 
