moved classes into NEW packages and switched jOOQ version to 3.13.1

--- a/vertx-pg-reactive-jooq/.gitignore
+++ b/vertx-pg-reactive-jooq/.gitignore
@@ -7,7 +7,4 @@ src/main/java/com/ns/vertx/pg/examples
 /.attach_pid**
 /.dbeaver
 /.sts4**
-../libs/**
-../libs/*.java
-../libs/*.java
-../lib/*
+/lib/*
