--- a/vertx-pg-reactive-jooq/.gitignore
+++ b/vertx-pg-reactive-jooq/.gitignore
@@ -8,3 +8,18 @@ src/main/java/com/ns/vertx/pg/examples
 /.dbeaver
 /.sts4**
 /lib/*
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+.idea/artifacts
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/modules.xml
+.idea/*.iml
+.idea/modules
+*.iml
+*.ipr
+libraries/
+.idea
