--- a/vertx-pg-reactive-jooq/pom.xml
+++ b/vertx-pg-reactive-jooq/pom.xml
@@ -60,12 +60,6 @@
 		</dependency>
 	
 		<dependency>
-			<groupId>org.javatuples</groupId>
-			<artifactId>javatuples</artifactId>
-			<version>1.2</version>
-		</dependency>
-	
-		<dependency>
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq</artifactId>
 			<version>${jooq.version}</version>
@@ -85,6 +79,22 @@
 			<artifactId>vertx-codegen</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- added this from vertx-jooq-generate project in order to use JavaGenerator class -->
+		<dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq-codegen</artifactId>
+            <version>${jooq.version}</version>
+        </dependency>
+        
+        <dependency>
+	        <groupId>io.github.jklingsporn</groupId>
+	        <artifactId>vertx-jooq-generate</artifactId>
+	        <version>5.1.1</version>
+	        <type>jar</type>
+	        <scope>compile</scope>
+    	</dependency>
+        
 	</dependencies>
 
 	<build>
@@ -242,11 +252,11 @@
 						<password>postgres</password>
 					</jdbc>
 
-					<!-- Adding new generator for being able to access JavaGenerator class -->
-					<generator>
-					<!-- TODO: include plain jOOQ Code generator in order to be able to extend JavaGenerator class -->
-						<name>org.jooq.codegen.JavaGenerator</name>
-					</generator>
+<!-- 					Adding new generator for being able to access JavaGenerator class -->
+<!-- 					<generator> -->
+<!-- 					TODO: include plain jOOQ Code generator in order to be able to extend JavaGenerator class -->
+<!-- 						<name>org.jooq.codegen.JavaGenerator</name> -->
+<!-- 					</generator> -->
 
 					<!-- Generator parameters -->
 					<generator>
