--- a/vertx-pg-reactive-jooq/pom.xml
+++ b/vertx-pg-reactive-jooq/pom.xml
@@ -13,6 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jooq.version>3.13.1</jooq.version>
 		<vertx-jooq-classic-reactive.version>5.1.1</vertx-jooq-classic-reactive.version>
+		<micrometer.version>1.1.0</micrometer.version>
 	</properties>
 
 	<dependencyManagement>
@@ -32,40 +33,40 @@
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-config</artifactId>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-web</artifactId>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
 		</dependency>
-	
+
 		<!-- required driver for using plain jOOQ querying -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.2.11</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-pg-client</artifactId>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-jdbc-client</artifactId>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.jooq</groupId>
 			<artifactId>jooq</artifactId>
@@ -76,7 +77,7 @@
 			<artifactId>vertx-jooq-classic-reactive</artifactId>
 			<version>${vertx-jooq-classic-reactive.version}</version>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-service-proxy</artifactId>
@@ -86,22 +87,42 @@
 			<artifactId>vertx-codegen</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
-		<!-- added this from vertx-jooq-generate project in order to use JavaGenerator class -->
+
+		<!-- added this from vertx-jooq-generate project in order to use JavaGenerator 
+			class -->
 		<dependency>
-            <groupId>org.jooq</groupId>
-            <artifactId>jooq-codegen</artifactId>
-            <version>${jooq.version}</version>
-        </dependency>
-        
-        <dependency>
-	        <groupId>io.github.jklingsporn</groupId>
-	        <artifactId>vertx-jooq-generate</artifactId>
-	        <version>5.1.1</version>
-	        <type>jar</type>
-	        <scope>compile</scope>
-    	</dependency>
-        
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq-codegen</artifactId>
+			<version>${jooq.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.jklingsporn</groupId>
+			<artifactId>vertx-jooq-generate</artifactId>
+			<version>5.1.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.8</version>
+		</dependency>
+
+		<!-- added next 2 dependencies for creating JMX samples -->
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-micrometer-metrics</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-jmx</artifactId>
+			<version>${micrometer.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -114,27 +135,27 @@
 						<source>1.8</source>
 						<target>1.8</target>
 						<useIncrementalCompilation>false</useIncrementalCompilation>
-						
+
 						<annotationProcessors>
 							<annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
-					    </annotationProcessors>
+						</annotationProcessors>
 						<generatedSourcesDirectory>${project.basedir}/src/main/generated</generatedSourcesDirectory>
-					    <compilerArgs>
-      						<arg>-AoutputDirectory=${project.basedir}/src/main</arg>
-					    </compilerArgs>						
+						<compilerArgs>
+							<arg>-AoutputDirectory=${project.basedir}/src/main</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 
 				<plugin>
-				  <artifactId>maven-clean-plugin</artifactId>
-				  <version>3.0.0</version>
-				  <configuration>
-				    <filesets>
-				      <fileset>
-				        <directory>${project.basedir}/src/main/generated</directory>
-				      </fileset>
-				    </filesets>
-				  </configuration>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.0.0</version>
+					<configuration>
+						<filesets>
+							<fileset>
+								<directory>${project.basedir}/src/main/generated</directory>
+							</fileset>
+						</filesets>
+					</configuration>
 				</plugin>
 
 				<plugin>
@@ -249,23 +270,22 @@
 					</dependency>
 				</dependencies>
 
-				<!-- Specify the plugin configuration. The configuration format is the same as for the standalone code generator -->
+				<!-- Specify the plugin configuration. The configuration format is the 
+					same as for the standalone code generator -->
 				<configuration>
 					<!-- JDBC connection parameters -->
 					<jdbc>
 						<driver>org.postgresql.Driver</driver>
-						<url>jdbc:postgresql://localhost:5432/vertx-jooq-cr</url> 
+						<url>jdbc:postgresql://localhost:5432/vertx-jooq-cr</url>
 						<user>postgres</user>
 						<password>postgres</password>
 					</jdbc>
 
 					<!-- Generator parameters -->
 					<generator>
-						<!-- The default code generator. You can override this one, to generate your own code style.
-					         Supported generators:
-					         - org.jooq.codegen.JavaGenerator
-					         - org.jooq.codegen.ScalaGenerator
-					         Defaults to org.jooq.codegen.JavaGenerator -->					    
+						<!-- The default code generator. You can override this one, to generate 
+							your own code style. Supported generators: - org.jooq.codegen.JavaGenerator 
+							- org.jooq.codegen.ScalaGenerator Defaults to org.jooq.codegen.JavaGenerator -->
 						<name>io.github.jklingsporn.vertx.jooq.generate.classic.ClassicReactiveVertxGenerator</name>
 						<database>
 							<name>org.jooq.meta.postgres.PostgresDatabase</name>
@@ -298,58 +318,63 @@
 									<nullability>ALL</nullability>
 									<objectType>ALL</objectType>
 								</forcedType>
-																													
+
 								<forcedType>
-									<userType>java.lang.String</userType> 
+									<userType>java.lang.String</userType>
 									<converter>
-										org.jooq.Converter.ofNullable(org.jooq.JSON.class, String.class, Object::toString, org.jooq.JSON::valueOf)
-									</converter>	
+										org.jooq.Converter.ofNullable(org.jooq.JSON.class,
+										String.class, Object::toString, org.jooq.JSON::valueOf)
+									</converter>
 									<includeExpression>(?i:get_all_orders|return_value)</includeExpression>
 									<includeTypes>.*</includeTypes>
-								</forcedType>															
-								
+								</forcedType>
+
 								<forcedType>
-									<userType>java.lang.String</userType> 
+									<userType>java.lang.String</userType>
 									<converter>
-										org.jooq.Converter.ofNullable(org.jooq.JSON.class, String.class, Object::toString, org.jooq.JSON::valueOf)
-									</converter>	
+										org.jooq.Converter.ofNullable(org.jooq.JSON.class,
+										String.class, Object::toString, org.jooq.JSON::valueOf)
+									</converter>
 									<includeExpression>(?i:get_book_by_book_id|return_value)</includeExpression>
 								</forcedType>
-								
+
 								<forcedType>
-									<userType>java.lang.String</userType> 
+									<userType>java.lang.String</userType>
 									<converter>
-										org.jooq.Converter.ofNullable(java.lang.Long.class, String.class, Object::toString, java.lang.Long::valueOf)
-									</converter>	
+										org.jooq.Converter.ofNullable(java.lang.Long.class,
+										String.class, Object::toString, java.lang.Long::valueOf)
+									</converter>
 									<includeExpression>(?i:get_book_by_book_id\.b_id)</includeExpression>
 								</forcedType>
-																
+
 								<forcedType>
-									<userType>java.lang.String</userType> 
+									<userType>java.lang.String</userType>
 									<converter>
-										org.jooq.Converter.ofNullable(org.jooq.JSON.class, String.class, Object::toString, org.jooq.JSON::valueOf)
-									</converter>	
+										org.jooq.Converter.ofNullable(org.jooq.JSON.class,
+										String.class, Object::toString, org.jooq.JSON::valueOf)
+									</converter>
 									<includeExpression>(?i:get_order_by_order_id|return_value)</includeExpression>
 								</forcedType>
-								
+
 								<forcedType>
-									<userType>java.lang.String</userType> 
+									<userType>java.lang.String</userType>
 									<converter>
-										org.jooq.Converter.ofNullable(java.lang.Long.class, String.class, Object::toString, java.lang.Long::valueOf)
-									</converter>	
+										org.jooq.Converter.ofNullable(java.lang.Long.class,
+										String.class, Object::toString, java.lang.Long::valueOf)
+									</converter>
 									<includeExpression>(?i:get_order_by_order_id\.o_id)</includeExpression>
-								</forcedType>							
-								
-<!-- 								<forcedType>							       -->
-<!-- 							      <userType>io.vertx.core.json.JsonArray</userType>														       -->
-<!-- 							      <binding>com.ns.vertx.pg.converters.PostgresJSONVertxJsonArrayBinding</binding>														       -->
-<!-- 							      <includeExpression>.*JSON.*</includeExpression>							      							       -->
-<!-- 							      <includeTypes>.*JSON.*</includeTypes> -->
-<!-- 							    </forcedType>	 -->
-							    																
+								</forcedType>
+
+								<!-- <forcedType> -->
+								<!-- <userType>io.vertx.core.json.JsonArray</userType> -->
+								<!-- <binding>com.ns.vertx.pg.converters.PostgresJSONVertxJsonArrayBinding</binding> -->
+								<!-- <includeExpression>.*JSON.*</includeExpression> -->
+								<!-- <includeTypes>.*JSON.*</includeTypes> -->
+								<!-- </forcedType> -->
+
 							</forcedTypes>
 							<dateAsTimestamp>true</dateAsTimestamp>
-							<recordTimestampFields>REC_TIMESTAMP</recordTimestampFields>							
+							<recordTimestampFields>REC_TIMESTAMP</recordTimestampFields>
 						</database>
 						<target>
 							<!-- This is where jOOQ will put your files -->
@@ -361,14 +386,15 @@
 							<routines>true</routines>
 							<daos>true</daos>
 							<fluentSetters>true</fluentSetters>
-<!-- 							<javaTimeTypes>true</javaTimeTypes> added because of Timestamp type for order_date field -->
+							<!-- <javaTimeTypes>true</javaTimeTypes> added because of Timestamp 
+								type for order_date field -->
 						</generate>
 
 						<strategy>
 							<name>io.github.jklingsporn.vertx.jooq.generate.VertxGeneratorStrategy</name>
 						</strategy>
 					</generator>
-									
+
 				</configuration>
 			</plugin>
 			<!-- Plug-in for "VertX-JOOQ-Classic-Reactive"::END -->
