--- a/vertx-pg-reactive-jooq/pom.xml
+++ b/vertx-pg-reactive-jooq/pom.xml
@@ -185,6 +185,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
+<!-- 										<Main-Class>com.ns.vertx.pg.Main</Main-Class> -->
 										<Main-Class>io.vertx.core.Launcher</Main-Class>
 										<Main-Verticle>${main.verticle}</Main-Verticle>
 									</manifestEntries>
@@ -227,6 +228,7 @@
 				<version>1.5.0</version>
 				<configuration>
 					<mainClass>io.vertx.core.Launcher</mainClass>
+<!-- 					<mainClass>com.ns.vertx.pg.Main</mainClass> -->
 					<systemProperties>
 						<systemProperty>
 							<key>hsqldb.reconfig_logging</key>
