--- a/vertx-pg-reactive-jooq/pom.xml
+++ b/vertx-pg-reactive-jooq/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
 		<vertx.version>3.9.0</vertx.version>
 		<main.verticle>com.ns.vertx.pg.MainVerticle</main.verticle>
+		<vertx.launcher>com.ns.vertx.pg.Main</vertx.launcher>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jooq.version>3.13.1</jooq.version>
 		<vertx-jooq-classic-reactive.version>5.1.1</vertx-jooq-classic-reactive.version>
@@ -130,7 +131,7 @@
 			<plugins>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.5.1</version>
+					<version>3.8.1</version>
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
@@ -169,38 +170,57 @@
 			</plugins>
 		</pluginManagement>
 
+
 		<plugins>
+		
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-shade-plugin</artifactId> -->
+<!-- 				<version>2.4.3</version> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<phase>package</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>shade</goal> -->
+<!-- 						</goals> -->
+<!-- 						<configuration> -->
+<!-- 							<transformers> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> -->
+<!-- 									<manifestEntries> -->
+<!-- 										<Main-Class>io.vertx.core.Launcher</Main-Class> -->
+<!-- 										<Main-Verticle>${main.verticle}</Main-Verticle> -->
+<!-- 									</manifestEntries> -->
+<!-- 								</transformer> -->
+<!-- 								<transformer -->
+<!-- 									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
+<!-- 									<resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource> -->
+<!-- 								</transformer> -->
+<!-- 							</transformers> -->
+<!-- 							<artifactSet> -->
+<!-- 							</artifactSet> -->
+<!-- 							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile> -->
+<!-- 						</configuration> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
+
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.4.3</version>
+				<groupId>io.reactiverse</groupId>
+				<artifactId>vertx-maven-plugin</artifactId>
+				<version>1.0.18</version>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<id>vmp</id>
 						<goals>
-							<goal>shade</goal>
+							<goal>initialize</goal>
+							<goal>package</goal>
 						</goals>
-						<configuration>
-							<transformers>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<manifestEntries>
-<!-- 										<Main-Class>com.ns.vertx.pg.Main</Main-Class> -->
-										<Main-Class>io.vertx.core.Launcher</Main-Class>
-										<Main-Verticle>${main.verticle}</Main-Verticle>
-									</manifestEntries>
-								</transformer>
-								<transformer
-									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-									<resource>META-INF/services/io.vertx.core.spi.VerticleFactory</resource>
-								</transformer>
-							</transformers>
-							<artifactSet>
-							</artifactSet>
-							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
-						</configuration>
 					</execution>
 				</executions>
+				<configuration>
+					<redeploy>true</redeploy>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -222,25 +242,25 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.5.0</version>
-				<configuration>
-					<mainClass>io.vertx.core.Launcher</mainClass>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.codehaus.mojo</groupId> -->
+<!-- 				<artifactId>exec-maven-plugin</artifactId> -->
+<!-- 				<version>1.5.0</version> -->
+<!-- 				<configuration> -->
+<!-- 					<mainClass>io.vertx.core.Launcher</mainClass> -->
 <!-- 					<mainClass>com.ns.vertx.pg.Main</mainClass> -->
-					<systemProperties>
-						<systemProperty>
-							<key>hsqldb.reconfig_logging</key>
-							<value>false</value>
-						</systemProperty>
-					</systemProperties>
-					<arguments>
-						<argument>run</argument>
-						<argument>${main.verticle}</argument>
-					</arguments>
-				</configuration>
-			</plugin>
+<!-- 					<systemProperties> -->
+<!-- 						<systemProperty> -->
+<!-- 							<key>hsqldb.reconfig_logging</key> -->
+<!-- 							<value>false</value> -->
+<!-- 						</systemProperty> -->
+<!-- 					</systemProperties> -->
+<!-- 					<arguments> -->
+<!-- 						<argument>run</argument> -->
+<!-- 						<argument>${main.verticle}</argument> -->
+<!-- 					</arguments> -->
+<!-- 				</configuration> -->
+<!-- 			</plugin> -->
 
 			<!-- ================================================ -->
 			<!-- Plug-in for "VertX-JOOQ-Classic-Reactive"::START -->
