--- a/vertx-pg-reactive-jooq/pom.xml
+++ b/vertx-pg-reactive-jooq/pom.xml
@@ -10,10 +10,10 @@
 	<properties>
 		<vertx.version>3.9.0</vertx.version>
 		<main.verticle>com.ns.vertx.pg.MainVerticle</main.verticle>
+		<vertx.launcher>com.ns.vertx.pg.ApplicationLauncher</vertx.launcher>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jooq.version>3.13.1</jooq.version>
 		<vertx-jooq-classic-reactive.version>5.1.1</vertx-jooq-classic-reactive.version>
-		<micrometer.version>1.1.0</micrometer.version>
 	</properties>
 
 	<dependencyManagement>
@@ -111,17 +111,13 @@
 			<version>1.8</version>
 		</dependency>
 
-		<!-- added next 2 dependencies for creating JMX samples -->
+		<!-- for Dropwizard metrics -->
 		<dependency>
 			<groupId>io.vertx</groupId>
-			<artifactId>vertx-micrometer-metrics</artifactId>
+			<artifactId>vertx-dropwizard-metrics</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-jmx</artifactId>
-			<version>${micrometer.version}</version>
-		</dependency>
+		
 
 	</dependencies>
 
@@ -185,7 +181,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>io.vertx.core.Launcher</Main-Class>
+										<Main-Class>${vertx.launcher}</Main-Class>
 										<Main-Verticle>${main.verticle}</Main-Verticle>
 									</manifestEntries>
 								</transformer>
@@ -226,7 +222,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.5.0</version>
 				<configuration>
-					<mainClass>io.vertx.core.Launcher</mainClass>
+					<mainClass>${vertx.launcher}</mainClass>
 					<systemProperties>
 						<systemProperty>
 							<key>hsqldb.reconfig_logging</key>
